<resources>
    <string name="app_name">AnimeTwo</string>
    <string name="a_nuh_mei">A - nuh -▷ mei</string>
    <string name="opmdesciption">One-Punch Man is a Japanese superhero franchise created by the artist ONE. It tells the story of Saitama ,a superhero who can defeat any opponent with a single punch but seeks to find a worthy opponent after growing bored by a lack of challenge due to his overwhelming strength.</string>
    <string name="description"><u>Description:</u></string>
    <string name="ratings"><u>Ratings:</u></string>
    <string name="watch_the_video_on_youtube"> <u>WATCH THE VIDEO ON YOUTUBE..... </u> </string>
    <string name="deathnotedescription">Light Yagami (Tatsuya Fujiwara) is a normal, undistinguished college student — that is, until he discovers an odd notebook lying on the ground. If someone\'s name is written on it while the writer imagines that person\'s face, he or she will die. But a mysterious detective known only as L (Ken\'ichi Matsuyama) becomes determined to put a stop to his reign.</string>
    <string name="attackontiandescription">It is set in a world where humanity lives inside cities surrounded by three enormous walls that protect them from the gigantic man-eating humanoids referred to as Titans; the story follows Eren Yeager, who vows to exterminate the Titans after a Titan brings about the destruction of his hometown and the death of his mother.</string>
    <string name="herodescription">The story follows Izuku Midoriya, a boy born without superpowers (called Quirks) in a world where they have become commonplace, but who still dreams of becoming a superhero himself. He is scouted by All Might, Japan\'s greatest hero, who chooses Midoriya as his successor and shares his Quirk with him after recognizing his potential, and later helps to enroll him in a prestigious high school for heroes in training.</string>
    <string name="demondescription">A boy raised by boars who wears a boar\'s head and another boy who reveals his true power whe n he sleeps, board the Infinity Train on a new mission with the Flame Pillar. Their mission is to defeat a demon who has been tormenting people and killing the demon slayers who oppose it.</string>
    <string name="narutodescription">It tells the story of Naruto Uzumaki, a young ninja who seeks recognition from his peers and dreams of becoming the Hokage, the leader of his village. The story is told in two parts – the first set in Naruto\'s pre-teen years, and the second in his teens.</string>
    <string name="fullmetaldescription">In an attempt to resurrect their mother who fell dead of stress cardiomyopathy, brothers Edward and Alphonse Elric attempt an alchemic ritual but fail as Edward\'s right arm has been severed and Alphonse loses his body. To fix this, they search for the sorcerers stone to get their original bodies back.</string>
    <string name="gokudescription">After Raditz kidnapped Goku\'s son, Gohan, he forms a truce with Piccolo in order to defeat Raditz. After sacrificing his life during the battle, Goku trains with King Kai in the Other World. During his epic battle with Freeza, Goku becomes the first Saiyan in a thousand years to transform into a fabled Super Saiyan.</string>
</resources>