<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greylayout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="106dp"
        android:id="@+id/metal"
        android:src="@drawable/fullmetallayout" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/metal"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginStart="60dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:id="@+id/description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:text="@string/fullmetaldescription"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/matter"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratings"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/black"
        android:layout_below="@id/matter"
        android:id="@+id/rating"
        android:layout_marginStart="60dp"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IMDb: 9.1/10 \nRotten Tomatoes: 100% \nMyAnimeList: 9.2/10"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/rating"
        android:layout_below="@id/matter"
        android:id="@+id/review"
        android:layout_marginStart="10dp"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/watch_the_video_on_youtube"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/review"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:id="@+id/fullmetallink"
        android:gravity="center"/>

</RelativeLayout>
</ScrollView>